--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <!--import for jquery and socketio-->
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <!--import for bootstrap-->
     <h1>Welcome to quickChat!</h1> <br>
     <p>Please fill in the following information to get started.</p> <br>
     <p>Put in a room code to match with friends.</p> <br>
@@ -24,16 +33,15 @@
                     r: $('#roomNumber').val(),
                     id: '{{uid}}'
                 }
-                console.log(data);
                 socket.emit('newUser', data)
             })
         })
         </script>
 
-        <input type="text" id="username" placeholder="Username" required> <br><br>
+        <input type="text" id="username" placeholder="Username" class="form-group"> <br><br>
         <label for="language">Choose your language</label>
         <!--language codes for googletrans api-->
-        <select id="language">
+        <select id="language" class="form-group">
             <option value="af">Afrikaans</option>
             <option value="ar">Arabic</option>
             <option value="bg">Bulgarian</option>
@@ -55,7 +63,7 @@
             <option value="es">Spanish</option>
             <option value="th">Thai</option>
         </select><br><br>
-        <input type="text" id="roomNumber" placeholder="Room Key"> <br><br>
+        <input type="text" id="roomNumber" placeholder="Room Key" class="form-group"> <br><br>
         
         <button id="submit">Submit!</button>
     </body>
