--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,8 +2,18 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <!--import for jquery and socketio-->
-    <h1>Chat!</h1>
-    <div id='messages'></div>
+    <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/chatstyles1.css') }}">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <!--import for bootstrap-->
+    </head>
+    <div id='messages' class="chat-messages"></div>
     <body>
         <script type="text/javascript">
         $(document).ready(function() {
@@ -23,8 +33,14 @@
             })
         })
         </script>
-        <input type="text" id="message" placeholder="Input message">
-        <button id="submit">Submit!</button>
+        <div class="row chat-box">
+            <div class="col">
+        <input type="text" id="message" placeholder="Type your message here" class = "form-group">
+            </div>
+            <div class="col">
+        <button id="submit" class="btn btn-primary">Send!</button>
+            </div>
+        </div>
 
     </body>
 </html>
